Fix Alignments

--- a/sources/statics/stylesheets/foundation/_base.scss
+++ b/sources/statics/stylesheets/foundation/_base.scss
@@ -38,12 +38,11 @@ body{
 
 .container{
     width: 550px;
-    margin: 0 auto;
+    margin: 0 auto 65px;
 }
 
 @media screen and (max-width: 400px) {
   .container{
-      width: 270px;
-      margin: 0 auto;
+      width: 300px;
   }
 }
