--- a/sources/statics/stylesheets/foundation/_footer.scss
+++ b/sources/statics/stylesheets/foundation/_footer.scss
@@ -1,11 +1,11 @@
 .page-footer{
-  margin-bottom: 120px;
+  margin-bottom: 65px;
   opacity: 1;
   visibility: visible;
   transition: all 0.5s ease;
   text-align: center;
   .socials{
-    margin-bottom: 70px;
+    margin-bottom: 65px;
     li{
       display: inline-block;
       vertical-align: middle;
