--- a/sources/statics/stylesheets/sections/_blog.scss
+++ b/sources/statics/stylesheets/sections/_blog.scss
@@ -1,5 +1,4 @@
 .posts{
-  margin-bottom: 75px;
   opacity: 1;
   visibility: visible;
   transition: all 0.5s ease;
