--- a/sources/statics/stylesheets/sections/_home.scss
+++ b/sources/statics/stylesheets/sections/_home.scss
@@ -1,7 +1,6 @@
 .home-content{
   text-align: center;
   color: #333;
-  margin-bottom: 85px;
   opacity: 1;
   visibility: visible;
   transition: all 0.5s ease;
