--- a/sources/statics/stylesheets/sections/_post.scss
+++ b/sources/statics/stylesheets/sections/_post.scss
@@ -2,7 +2,6 @@
   opacity: 1;
   visibility: visible;
   transition: all 0.5s ease;
-  margin-bottom: 85px;
   .post-header{
     small, a{
       font-size: 10px;
@@ -26,6 +25,7 @@
     }
   }
   .post-body{
+    margin-bottom: 65px;
       p{
           color: #333;
           display: block;
@@ -132,10 +132,6 @@
         margin-bottom: 25px;
         display: block;
       }
-  }
-
-  #comments{
-      padding-top: 50px;
   }
 }
 
