--- a/sources/statics/stylesheets/sections/_projects.scss
+++ b/sources/statics/stylesheets/sections/_projects.scss
@@ -2,7 +2,6 @@
   opacity: 1;
   visibility: visible;
   transition: all 0.5s ease;
-  margin-bottom: 85px;
 }
 .projeto{
     display: inline-block;
